<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sidemenusakura.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sidemenusakura.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sidemenusakura.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <activity
        android:id="@+id/nav_login"
        android:name="com.example.sidemenusakura.DeliveryManagement.MainActivitylogin"
        android:label="activity_main_activitylogin"
        tools:layout="@layout/activity_main_activitylogin" />
    <activity
        android:id="@+id/mainActivityDriver1"
        android:name="com.example.sidemenusakura.DeliveryManagement.MainActivityDriver1"
        android:label="activity_main_driver1"
        tools:layout="@layout/activity_main_driver1" />
    <activity
        android:id="@+id/userProfileActivity"
        android:name="com.example.sidemenusakura.UserManagement.UserProfileActivity"
        android:label="activity_userprofile"
        tools:layout="@layout/activity_userprofile" />
</navigation>