<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4ECEF"
    tools:context=".OrderManagement.payments">


    <EditText
        android:id="@+id/edittext_holder"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#D3D3CF"
        android:hint="holder of card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edittext_card"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#D3D3CF"
        android:hint="card number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/edittext_date"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#D3D3CF"
        android:hint="valid date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_savepayments"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#FF316DD1"
        android:text="@string/savepaymnets"
        android:textStyle="bold"
        app:backgroundTint="#FF316DD1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <Button
        android:id="@+id/button_viewpayments"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="118dp"
        android:background="#C0D11C"
        android:text="@string/viewpayments"
        android:textStyle="bold"
        app:backgroundTint="#C0D11C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:background="#F4F1FA"
        android:text="@string/paymentscard"
        android:textColor="#9C27B0"
        android:textColorHint="#28FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:background="#F6F0F0"
        android:text="@string/creditcard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:background="#FAF7F7"
        android:text="@string/debitcard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:background="#FFEB3B"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/payment_method"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:background="#FFEB3B"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/card_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_card"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:background="#FFEB3B"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_holder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:background="#FFEB3B"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/valid_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

</androidx.constraintlayout.widget.ConstraintLayout>



